--- a/docs/03-pages/01-building-your-application/03-data-fetching/02-get-static-paths.mdx
+++ b/docs/03-pages/01-building-your-application/03-data-fetching/02-get-static-paths.mdx
@@ -19,7 +19,7 @@ type Repo = {
   stargazers_count: number
 }
 
-export async function getStaticPaths() {
+export const getStaticPaths = (async () => {
   return {
     paths: [
       {
@@ -30,13 +30,13 @@ export async function getStaticPaths() {
     ],
     fallback: true, // false or "blocking"
   }
-} satisfies GetStaticPaths
+}) satisfies getStaticPaths
 
-export async function getStaticProps() {
+export const getStaticProps = (async (context) => {
   const res = await fetch('https://api.github.com/repos/vercel/next.js')
   const repo = await res.json()
   return { props: { repo } }
-} satisfies GetStaticProps<{
+}) satisfies GetStaticProps<{
   repo: Repo
 }>
 
