--- a/docs/02-app/01-building-your-application/07-configuring/01-typescript.mdx
+++ b/docs/02-app/01-building-your-application/07-configuring/01-typescript.mdx
@@ -177,17 +177,17 @@ For [`getStaticProps`](/docs/pages/api-reference/functions/get-static-props), [`
 ```tsx filename="pages/blog/[slug].tsx"
 import { GetStaticProps, GetStaticPaths, GetServerSideProps } from 'next'
 
-export async function getStaticProps(context) {
+export const getStaticProps = (async (context) => {
   // ...
-} satisfies GetStaticProps
+}) satisfies GetStaticProps
 
-export async function getStaticPaths() {
+export const getStaticPaths = (async () => {
   // ...
-} satisfies GetStaticPaths
+}) satisfies GetStaticPaths
 
-export async function getServerSideProps(context) {
+export const getServerSideProps = (async (context) => {
   // ...
-} satisfies GetServerSideProps
+}) satisfies GetServerSideProps
 ```
 
 > **Good to know:** `satisfies` was added to TypeScript in [4.9](https://www.typescriptlang.org/docs/handbook/release-notes/typescript-4-9.html). We recommend upgrading to the latest version of TypeScript.
