--- a/docs/03-pages/02-api-reference/02-functions/get-server-side-props.mdx
+++ b/docs/03-pages/02-api-reference/02-functions/get-server-side-props.mdx
@@ -13,13 +13,13 @@ type Repo = {
   stargazers_count: number
 }
 
-export const getServerSideProps: GetServerSideProps<{
-  repo: Repo
-}> = async () => {
+export const getServerSideProps = (async (context) => {
   const res = await fetch('https://api.github.com/repos/vercel/next.js')
   const repo = await res.json()
   return { props: { repo } }
-}
+}) satisfies GetServerSideProps<{
+  repo: Repo
+}>
 
 export default function Page({
   repo,
@@ -29,7 +29,7 @@ export default function Page({
 ```
 
 ```jsx filename="pages/index.js" switcher
-export const getServerSideProps = async () => {
+export async function getServerSideProps() {
   const res = await fetch('https://api.github.com/repos/vercel/next.js')
   const repo = await res.json()
   return { props: { repo } }
