--- a/docs/03-pages/02-api-reference/02-functions/get-static-paths.mdx
+++ b/docs/03-pages/02-api-reference/02-functions/get-static-paths.mdx
@@ -28,7 +28,7 @@ export const getStaticPaths = (async () => {
     ],
     fallback: true, // false or "blocking"
   }
-}) satisfies getStaticPaths
+}) satisfies GetStaticPaths
 
 export const getStaticProps = (async (context) => {
   const res = await fetch('https://api.github.com/repos/vercel/next.js')
