--- a/errors/reserved-port.mdx
+++ b/errors/reserved-port.mdx
@@ -20,7 +20,7 @@ Starting the server on a reserved port will result in an error.
 
 ## Possible Ways to Fix It
 
-Visit the [port blocking](https://fetch.spec.whatwg.org/#port-blocking) section of WHATWG's fetch spec and ensure your port is not on the known reserved port list.
+Change the provided port to ensure it's not listed in the [Port Blocking](https://fetch.spec.whatwg.org/#port-blocking) section of WHATWG's fetch spec.
 
 ## Useful Links
 
