--- a/errors/reserved-port.mdx
+++ b/errors/reserved-port.mdx
@@ -13,7 +13,7 @@ next start -p 4045
 or
 
 ```
-next dev -p 4045
+next dev --port 4045
 ```
 
 Starting the server on a reserved port will result in an error.
