--- a/docs/02-app/01-building-your-application/06-optimizing/02-fonts.mdx
+++ b/docs/02-app/01-building-your-application/06-optimizing/02-fonts.mdx
@@ -336,6 +336,7 @@ Alternatively, you can create a [CSS variable](/docs/app/api-reference/component
 ```tsx filename="app/layout.tsx" switcher
 import { Inter, Roboto_Mono } from 'next/font/google'
 import styles from './global.css'
+/*this is not being used ^, its confusing*/
 
 const inter = Inter({
   subsets: ['latin'],
