--- a/docs/02-app/01-building-your-application/01-routing/05-dynamic-routes.mdx
+++ b/docs/02-app/01-building-your-application/01-routing/05-dynamic-routes.mdx
@@ -121,6 +121,6 @@ export default function Page({ params }) {
 | `app/blog/[slug]/page.js`           | `{ slug: string }`                       |
 | `app/shop/[...slug]/page.js`        | `{ slug: string[] }`                     |
 | `app/[categoryId]/[itemId]/page.js` | `{ categoryId: string, itemId: string }` |
-| `app/shop/[[...slug]]/page.js`      | `{ slug: string[] | undefined }          |
+| `app/shop/[[...slug]]/page.js`      | `{ slug: string[] | undefined }`         |
 
 > **Good to know**: This may be done automatically by the [TypeScript plugin](/docs/app/building-your-application/configuring/typescript#typescript-plugin) in the future.
