Updates Mozilla links to not include language preference

--- a/docs/02-app/01-building-your-application/08-deploying/01-static-exports.mdx
+++ b/docs/02-app/01-building-your-application/08-deploying/01-static-exports.mdx
@@ -261,7 +261,7 @@ If you need to read dynamic values from the incoming request, you cannot use a s
 
 ### Browser APIs
 
-Client Components are pre-rendered to HTML during `next build`. Because [Web APIs](https://developer.mozilla.org/en-US/docs/Web/API) like `window`, `localStorage`, and `navigator` are not available on the server, you need to safely access these APIs only when running in the browser. For example:
+Client Components are pre-rendered to HTML during `next build`. Because [Web APIs](https://developer.mozilla.org/docs/Web/API) like `window`, `localStorage`, and `navigator` are not available on the server, you need to safely access these APIs only when running in the browser. For example:
 
 ```jsx
 'use client';
