Fixed fallback value to supported in getStaticPaths docs

--- a/docs/03-pages/01-building-your-application/03-data-fetching/02-get-static-paths.mdx
+++ b/docs/03-pages/01-building-your-application/03-data-fetching/02-get-static-paths.mdx
@@ -28,7 +28,7 @@ export const getStaticPaths = (async () => {
         },
       }, // See the "paths" section below
     ],
-    fallback: true, // false or "blocking"
+    fallback: "blocking", // false or "blocking"
   }
 }) satisfies GetStaticPaths
 
