--- a/docs/02-app/02-api-reference/02-file-conventions/error.mdx
+++ b/docs/02-app/02-api-reference/02-file-conventions/error.mdx
@@ -146,6 +146,7 @@ export default function GlobalError({ error, reset }) {
 >
 > - `global-error.js` replaces the root `layout.js` when active and so **must** define its own `<html>` and `<body>` tags.
 > - While designing error UI, you may find it helpful to use the [React Developer Tools](https://react.dev/learn/react-developer-tools) to manually toggle Error boundaries.
+> - The `global-error` boundary is supposed to be displayed on in prod and not in dev to discover the error and fix it.
 
 ## Version History
 
