--- a/docs/02-app/01-building-your-application/02-data-fetching/03-forms-and-mutations.mdx
+++ b/docs/02-app/01-building-your-application/02-data-fetching/03-forms-and-mutations.mdx
@@ -361,39 +361,65 @@ export default async function submit(formData) {
 
 <AppOnly>
 
-Use the `useFormStatus` hook to show a loading state when a form is submitting on the server:
+Use the `useFormStatus` hook to show a loading state when a form is submitting on the server. The `useFormStatus` hook can only be used as a child of a `form` element using a Server Action.
 
-```tsx filename="app/page.tsx" switcher
+For example, the following submit button:
+
+```tsx filename="app/submit-button.tsx" switcher
 'use client'
 
 import { experimental_useFormStatus as useFormStatus } from 'react-dom'
 
-function SubmitButton() {
+export function SubmitButton() {
   const { pending } = useFormStatus()
 
   return (
     <button disabled={pending}>{pending ? 'Submitting...' : 'Submit'}</button>
+  )
+}
+```
+
+```jsx filename="app/submit-button.jsx" switcher
+'use client'
+
+import { experimental_useFormStatus as useFormStatus } from 'react-dom'
+
+export function SubmitButton() {
+  const { pending } = useFormStatus()
+
+  return (
+    <button disabled={pending}>{pending ? 'Submitting...' : 'Submit'}</button>
+  )
+}
+```
+
+Can then be used in a form with a Server Action:
+
+```tsx filename="app/page.tsx" switcher
+import { SubmitButton } from '@/app/submit-button'
+
+export default async function Home() {
+  return (
+    <form action={...}>
+      <input type="text" name="field-name" />
+      <SubmitButton />
+    </form>
   )
 }
 ```
 
 ```jsx filename="app/page.jsx" switcher
-'use client'
+import { SubmitButton } from '@/app/submit-button'
 
-import { experimental_useFormStatus as useFormStatus } from 'react-dom'
-
-function SubmitButton() {
-  const { pending } = useFormStatus()
-
+export default async function Home() {
   return (
-    <button disabled={pending}>{pending ? 'Submitting...' : 'Submit'}</button>
+    <form action={...}>
+      <input type="text" name="field-name" />
+      <SubmitButton />
+    </form>
   )
 }
 ```
-
-> **Good to know:**
->
-> - Displaying loading or error states currently requires using Client Components. We are exploring options for server-side functions to retrieve these values as we move forward in stability for Server Actions.
 
 </AppOnly>
 
