--- a/docs/02-app/01-building-your-application/02-data-fetching/03-forms-and-mutations.mdx
+++ b/docs/02-app/01-building-your-application/02-data-fetching/03-forms-and-mutations.mdx
@@ -563,7 +563,7 @@ function SubmitButton() {
   const { pending } = useFormStatus()
 
   return (
-    <button type="submit" disabled={pending}>
+    <button type="submit" aria-disabled={pending}>
       Add
     </button>
   )
@@ -577,7 +577,9 @@ export function AddForm() {
       <label htmlFor="todo">Enter Task</label>
       <input type="text" id="todo" name="todo" required />
       <SubmitButton />
-      {state && <p aria-live="polite">{state.message}</p>}
+      <p aria-live="polite" className="sr-only">
+        {state?.message}
+      </p>
     </form>
   )
 }
@@ -598,7 +600,7 @@ function SubmitButton() {
   const { pending } = useFormStatus()
 
   return (
-    <button type="submit" disabled={pending}>
+    <button type="submit" aria-disabled={pending}>
       Add
     </button>
   )
@@ -612,7 +614,9 @@ export function AddForm() {
       <label htmlFor="todo">Enter Task</label>
       <input type="text" id="todo" name="todo" required />
       <SubmitButton />
-      {state && <p aria-live="polite">{state.message}</p>}
+      <p aria-live="polite" className="sr-only">
+        {state?.message}
+      </p>
     </form>
   )
 }
