fix(docs): internationalization middleware example
- remove the slash before `pathname` (already included in the value).
- add `search` and `hash` values in redirected url:
   - retains these values on redirect
   - they already have `?` and `#` respectively

--- a/docs/02-app/01-building-your-application/01-routing/13-internationalization.mdx
+++ b/docs/02-app/01-building-your-application/01-routing/13-internationalization.mdx
@@ -42,7 +42,7 @@ function getLocale(request) { ... }
 
 export function middleware(request) {
   // Check if there is any supported locale in the pathname
-  const pathname = request.nextUrl.pathname
+  const { pathname, search, hash } = request.nextUrl;
   const pathnameIsMissingLocale = locales.every(
     (locale) => !pathname.startsWith(`/${locale}/`) && pathname !== `/${locale}`
   )
@@ -54,7 +54,7 @@ export function middleware(request) {
     // e.g. incoming request is /products
     // The new URL is now /en-US/products
     return NextResponse.redirect(
-      new URL(`/${locale}/${pathname}`, request.url)
+      new URL(`/${locale}${pathname}${search}${hash}`, request.url)
     )
   }
 }
