--- a/docs/02-app/02-api-reference/01-components/image.mdx
+++ b/docs/02-app/02-api-reference/01-components/image.mdx
@@ -53,8 +53,8 @@ Here's a summary of the props available for the Image Component:
 | [`priority`](#priority)                   | `priority={true}`                    | Boolean         | -        |
 | [`placeholder`](#placeholder)             | `placeholder="blur"`                 | String          | -        |
 | [`style`](#style)                         | `style={{objectFit: "contain"}}`     | Object          | -        |
-| [`onLoadingComplete`](#onloadingcomplete) | `onLoadingComplete={img => done())}` | Function        | -        |
-| [`onLoad`](#onload)                       | `onLoad={event => done())}`          | Function        | -        |
+| [`onLoadingComplete`](#onloadingcomplete) | `onLoadingComplete={img => done()}`  | Function        | -        |
+| [`onLoad`](#onload)                       | `onLoad={event => done()}`           | Function        | -        |
 | [`onError`](#onerror)                     | `onError(event => fail()}`           | Function        | -        |
 | [`loading`](#loading)                     | `loading="lazy"`                     | String          | -        |
 | [`blurDataURL`](#blurdataurl)             | `blurDataURL="data:image/jpeg..."`   | String          | -        |
