--- a/docs/02-app/01-building-your-application/01-routing/03-linking-and-navigating.mdx
+++ b/docs/02-app/01-building-your-application/01-routing/03-linking-and-navigating.mdx
@@ -84,7 +84,7 @@ export function Links() {
         <li>
           <Link
             className={`link ${pathname === '/about' ? 'active' : ''}`}
-            href="/"
+            href="/about"
           >
             About
           </Link>
@@ -115,7 +115,7 @@ export function Links() {
         <li>
           <Link
             className={`link ${pathname === '/about' ? 'active' : ''}`}
-            href="/"
+            href="/about"
           >
             About
           </Link>
