--- a/docs/02-app/01-building-your-application/01-routing/10-route-handlers.mdx
+++ b/docs/02-app/01-building-your-application/01-routing/10-route-handlers.mdx
@@ -388,7 +388,7 @@ export async function GET(request, { params }) {
 
 ### URL Query Parameters
 
-The request object passed to the route handler is a `NextRequest` instance, which has [some additional convenient methods](/docs/app/api-reference/functions/next-request#nexturl), including for handling query parameters.
+The request object passed to the Route Handler is a `NextRequest` instance, which has [some additional convenience methods](/docs/app/api-reference/functions/next-request#nexturl), including more easily handling query parameters.
 
 ```ts filename="app/test/route.ts" switcher
 import { type NextRequest } from 'next/server'
