--- a/docs/02-app/02-api-reference/04-functions/server-actions.mdx
+++ b/docs/02-app/02-api-reference/04-functions/server-actions.mdx
@@ -134,8 +134,9 @@ module.exports = {
 
 The following React API pages are currently being documented:
 
-- React Actions (🚧)
+- [`"use server"`](https://react.dev/reference/react/use-server)
 - `action` (🚧)
 - `formAction` (🚧)
 - `useFormStatus` (🚧)
+- `useFormState` (🚧)
 - `useOptimistic` (🚧)
