--- a/docs/02-app/02-api-reference/02-file-conventions/error.mdx
+++ b/docs/02-app/02-api-reference/02-file-conventions/error.mdx
@@ -148,7 +148,8 @@ export default function GlobalError({ error, reset }) {
 > - While designing error UI, you may find it helpful to use the [React Developer Tools](https://react.dev/learn/react-developer-tools) to manually toggle Error boundaries.
 
 ## not-found.js
-The not-found file is used to render UI when the notFound function is thrown within a route segment. You can also read more about this at [not-found](https://nextjs.org/docs/app/api-reference/file-conventions/not-found)
+
+The [`not-found`](https://nextjs.org/docs/app/api-reference/file-conventions/not-found) file is used to render UI when the `notFound()` function is thrown within a route segment.
 
 ## Version History
 
