Apply suggestions from code review

--- a/docs/01-getting-started/01-installation.mdx
+++ b/docs/01-getting-started/01-installation.mdx
@@ -15,19 +15,11 @@ System Requirements:
 .
 ## Automatic Installation
 
-We recommend starting a new Next.js app using `create-next-app`, which sets up everything automatically for you. To create a project, run:
+We recommend starting a new Next.js app using [`create-next-app`](/docs/app/api-reference/create-next-app), which sets up everything automatically for you. To create a project, run:
 
 ```bash filename="Terminal"
 npx create-next-app@latest
 ```
-
-Alternatively, if you prefer to use bun for creating a Next.js application, you can do so by running:
-
-```bash filename="Terminal"
-bun create next-app
-```
-
-For this to work, you need to have bun installed on your system
 
 On installation, you'll see the following prompts:
 
