--- a/docs/02-app/02-api-reference/04-functions/redirect.mdx
+++ b/docs/02-app/02-api-reference/04-functions/redirect.mdx
@@ -55,7 +55,10 @@ export default async function Profile({ params }) {
 }
 ```
 
-> **Good to know**: `redirect` does not require you to use `return redirect()` as it uses the TypeScript [`never`](https://www.typescriptlang.org/docs/handbook/2/functions.html#never) type.
+> **Good to know**: 
+> 
+> - `redirect` does not require you to use `return redirect()` as it uses the TypeScript [`never`](https://www.typescriptlang.org/docs/handbook/2/functions.html#never) type.
+> - Using `redirect` inside event attributes like `onClick` will not work as it does not get caught by the error boundaries
 
 | Version   | Changes                |
 | --------- | ---------------------- |
