--- a/docs/02-app/02-api-reference/04-functions/not-found.mdx
+++ b/docs/02-app/02-api-reference/04-functions/not-found.mdx
@@ -29,7 +29,11 @@ export default async function Profile({ params }) {
 }
 ```
 
-> **Good to know**: `notFound()` does not require you to use `return notFound()` due to using the TypeScript [`never`](https://www.typescriptlang.org/docs/handbook/2/functions.html#never) type.
+> **Good to know**: 
+> 
+> - `notFound()` does not require you to use `return notFound()` due to using the TypeScript [`never`](https://www.typescriptlang.org/docs/handbook/2/functions.html#never) type.
+> - Using `notFound` inside event attributes like `onClick` will not work as it does not get caught by the error boundaries
+
 
 ## Version History
 
