--- a/docs/01-getting-started/01-installation.mdx
+++ b/docs/01-getting-started/01-installation.mdx
@@ -15,7 +15,7 @@ System Requirements:
 
 ## Automatic Installation
 
-We recommend starting a new Next.js app using `create-next-app`, which sets up everything automatically for you. To create a project, run:
+We recommend starting a new Next.js app using [`create-next-app`](/docs/app/api-reference/create-next-app), which sets up everything automatically for you. To create a project, run:
 
 ```bash filename="Terminal"
 npx create-next-app@latest
