--- a/docs/02-app/01-building-your-application/07-configuring/05-mdx.mdx
+++ b/docs/02-app/01-building-your-application/07-configuring/05-mdx.mdx
@@ -347,7 +347,17 @@ export default function Post(props) {
 }
 ```
 
+<AppOnly>
+
+If you use it across the site you may want to add the provider to `layout.js` so all MDX pages pick up the custom element config.
+
+</AppOnly>
+
+<PagesOnly>
+
 If you use it across the site you may want to add the provider to `_app.js` so all MDX pages pick up the custom element config.
+
+</PagesOnly>
 
 ## Deep Dive: How do you transform markdown into HTML?
 
