--- a/docs/01-getting-started/01-installation.mdx
+++ b/docs/01-getting-started/01-installation.mdx
@@ -46,7 +46,12 @@ After the prompts, `create-next-app` will create a folder with your project name
 To manually create a new Next.js app, install the required packages:
 
 ```bash filename="Terminal"
-npm install next@latest react@latest react-dom@latest
+npm install next@latest react@latest react-dom@latest --save-dev
+```
+
+or with yarn
+```bash filename="Terminal"
+yarn install next@latest react@latest react-dom@latest -D
 ```
 
 Open your `package.json` file and add the following `scripts`:
